<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/editar_item"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_id_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/id_do_item"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/input_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/nome_do_item"
        android:inputType="textAutoComplete"
        android:padding="10dp"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:background="@color/cardview_dark_background"
            android:text="@string/voltar"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:background="@color/colorAccent"
            android:text="@string/editar"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>


</LinearLayout>